--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "chat service, forward chat message to online people and store them to chat-data-service",
   "dependencies": {
+    "@grpc/proto-loader": "^0.5.4",
     "express": "^4.17.1",
     "grpc": "^1.24.3",
     "socket.io": "^2.3.0"
